[package]
name = "rustdoc-denormalize"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/rustdoc-denormalize"
documentation = "https://docs.rs/rustdoc-denormalize"
description = "Denormalize the Rustdoc JSON output so it can be analyzed on a per-item basis"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <rust@yosh.is>"
]

[features]

[dependencies]
rustdoc-types = "=0.20.0"
serde = "1.0.166"
serde_json = "1.0.100"

[dev-dependencies]
